# apriltag_box_detection

./: .gitignore  CMakeLists.txt  README.md  package.xml
assets/: apriltags_tag36h11_0-99.page_1.crops.yaml
assets/meshes/: tag_0.dae  tag_1.dae  tag_2.dae  tag_3.dae  tag_4.dae  tag_5.dae  tag_6.dae
config/: box.yaml  robot.yaml  settings.yaml  tags.yaml
launch/: box_config_viewer.launch  box_detection.launch  realsense_box_detection.launch  realsense_robot_relative_box_detection.launch  robot_config_viewer.launch  robot_relative_box_detection.launch  webcam_box_detection.launch
rviz/: box_config_viewer.rviz  box_detection.rviz  box_detection_realsense.rviz  realsense_robot_relative_box_detection.rviz  robot_config_viewer.rviz  robot_relative_box_detection.rviz
scripts/: box_config_viewer.py  box_image_overlay.py  box_pose_estimator.py  generate_tag_meshes.py  robot_config_viewer.py  robot_relative_box_pose_estimator.py
