<?xml version="1.0"?>
<package format="2">
  <name>apriltag_box_detection</name>
  <version>0.0.0</version>
  <description>Estimate and visualize boxes with AprilTags attached.</description>

  <maintainer email="leus@todo.todo">leus</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>poppler-utils</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>
</package>
