<?xml version="1.0"?>
<package format="2">
  <name>apriltag_box_detection</name>
  <version>0.0.0</version>
  <description>Estimate and visualize boxes with AprilTags attached.</description>

  <maintainer email="leus@todo.todo">leus</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>apriltag_ros</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>poppler-utils</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
